can-socket/tests/compile-fail/can_id_negative1.rs
fn main() {
	let _id = can_socket::id!(-2);
}
